--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-jest": "^21.3.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "loglevel": "^1.6.0",
@@ -29,21 +30,24 @@
   },
   "jest": {
     "setupFiles": [
-      "./src/formogen/tests/jestsetup.js"
+      "<rootDir>/test/setup.js"
     ],
     "snapshotSerializers": [
       "<rootDir>/node_modules/enzyme-to-json/serializer"
-    ]
+    ],
+    "moduleDirectories": ["node_modules", "<rootDir>/src/formogen"]
   },
   "devDependencies": {
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
     "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-react-native": "^3.1.0",
     "jest": "^21.2.1",
+    "raf": "^3.4.0",
     "react-addons-test-utils": "^15.6.2"
   }
 }
