--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "snapshotSerializers": [
       "<rootDir>/node_modules/enzyme-to-json/serializer"
     ],
-    "moduleDirectories": ["node_modules", "<rootDir>/src/formogen"]
+    "moduleDirectories": ["node_modules", "<rootDir>/src"]
   },
   "devDependencies": {
     "babel-jest": "^21.2.0",
