--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "react-datepicker": "^0.60.2",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.2",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
     "react-select": "^1.0.0-rc.10",
     "react-times": "^2.2.8",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.72.0",
     "urijs": "^1.19.0"
