--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "^6.26.0",
     "eslint-plugin-jest": "^21.3.2",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "loglevel": "^1.6.0",
     "loglevel-plugin-prefix": "^0.5.3",
