--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^0.60.2",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.2",
+    "react-measure": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
     "react-select": "^1.0.0-rc.10",
