--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "generic-react-project",
-  "version": "0.1.2",
-  "private": true,
+  "name": "reformogen",
+  "version": "0.1.3",
+  "private": false,
+  "license": "MIT",
   "dependencies": {
     "@babel/core": "7.1.2",
     "@babel/polyfill": "^7.0.0",
@@ -68,6 +69,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
+    "reformogen-redux": "^0.2.0",
     "reselect": "^4.0.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -151,10 +153,10 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/configureStore.js",
-      "!src/index.js",                            
-      "!src/reducers.js",                         
-      "!src/rootSaga.js",                         
-      "!src/serviceWorker.js",                    
+      "!src/index.js",
+      "!src/reducers.js",
+      "!src/rootSaga.js",
+      "!src/serviceWorker.js",
       "!src/features/App/**"
     ],
     "resolver": "jest-pnp-resolver",
